--- a/src/main/resources/templates/volunteer-work/work.html
+++ b/src/main/resources/templates/volunteer-work/work.html
@@ -62,9 +62,15 @@
                         <span style="color: rgb(255, 87, 87);">46,860</span>
                         개의 후원 목록이 있습니다.
                         <select class="wrap_span">
-                            <option>후원 많은 순</option>
-                            <option>후원 적은 순</option>
-                            <option>최신순</option>
+                            <option value="">전체보기</option>
+                            <option value="">서울특별시</option>
+                            <option value="">경기도</option>
+                            <option value="">충청북도</option>
+                            <option value="">충청남도</option>
+                            <option value="">경상남도</option>
+                            <option value="">경상북도</option>
+                            <option value="">전라남도</option>
+                            <option value="">전라북도</option>
                         </select>
                     </div>
                     <div class="real_content">
