--- a/src/main/resources/templates/customerCenter/notice-detail.html
+++ b/src/main/resources/templates/customerCenter/notice-detail.html
@@ -49,25 +49,25 @@
                     <p class="">텀블벅 커뮤니티팀 드림</p>
                 </div>
             </div>
-            <ul class="notice-detail-next-container">
-                <li>
-                    <b>이전글</b>
-                    <button type="button" value="">
-                        [서비스 개편] Premium 요금제 혜택 추가 및 요금제 심사 안내 (2023.4.12 시행)
-                    </button>
-                </li>
-                <li>
-                    <b>다음글</b>
-                    <button type="button" value="">
-                        [텀블벅] 2023.4.10(월) KT 유/무선 인터넷 환경 이미지 로딩 지연 발생 안내 (해결 완료)
-                    </button>
-                </li>
-            </ul>
+<!--            <ul class="notice-detail-next-container">-->
+<!--                <li>-->
+<!--                    <b>이전글</b>-->
+<!--                    <button type="button" value="">-->
+<!--                        [서비스 개편] Premium 요금제 혜택 추가 및 요금제 심사 안내 (2023.4.12 시행)-->
+<!--                    </button>-->
+<!--                </li>-->
+<!--                <li>-->
+<!--                    <b>다음글</b>-->
+<!--                    <button type="button" value="">-->
+<!--                        [텀블벅] 2023.4.10(월) KT 유/무선 인터넷 환경 이미지 로딩 지연 발생 안내 (해결 완료)-->
+<!--                    </button>-->
+<!--                </li>-->
+<!--            </ul>-->
         </div>
 
 
     
-        <div class="notice-detail-btn-wrap">
+        <div class="notice-detail-btn-wrap" style="margin-top: 40px">
             <button class="notice-detail-btn" onclick="javascript:location.href='/inquiry/notice'">목록으로 돌아가기</button>
         </div>
 
