--- a/src/main/resources/templates/mypage/exchange-request.html
+++ b/src/main/resources/templates/mypage/exchange-request.html
@@ -100,12 +100,12 @@
                         <div class="change-modal-title-row">
                             <h4 class="change-modal-title-text">공양미 환전 요청</h4>
                         </div>
-                        <form action="" class="change-modal-form-wrapper" name="exchangeForm">
+                        <form th:action="@{exchange-request}" class="change-modal-form-wrapper" name="exchangeForm">
                             <div class="change-modal-form-row">
                                 <span class="change-modal-form-label">은행</span>
                                 <div class="change-modal-form-field">
                                     <div class="change-modal-form-title">
-                                        <input type="text" placeholder="은행을 입력하세요." id="name" class="change-modal-form-title-input" maxlength="4">
+                                        <input name="ricePaymentExchangeBank" type="text" placeholder="은행을 입력하세요." id="name" class="change-modal-form-title-input" maxlength="4">
                                         <div class="error-message">비워둘 수 없습니다.</div>
                                     </div>
                                 </div>
@@ -114,7 +114,7 @@
                                 <span class="change-modal-form-label">계좌번호</span>
                                 <div class="change-modal-form-field">
                                     <div class="change-modal-form-title">
-                                        <input type="text" placeholder="계좌번호를 입력해주세요." class="change-modal-form-title-input">
+                                        <input name="ricePaymentExchangeAccount" type="text" placeholder="계좌번호를 입력해주세요." class="change-modal-form-title-input">
                                         <div class="error-message">비워둘 수 없습니다.</div>
                                     </div>
                                 </div>
@@ -123,7 +123,7 @@
                                 <span class="change-modal-form-label">환전할 공양미</span>
                                 <div class="change-modal-form-field">
                                     <div class="change-modal-form-title">
-                                        <input type="text" placeholder="환전할 공양미 개수를 입력하세요." class="change-modal-form-title-input">
+                                        <input name="ricePaymentUsed" type="text" placeholder="환전할 공양미 개수를 입력하세요." class="change-modal-form-title-input">
                                         <div class="error-message">비워둘 수 없습니다.</div>
                                         <div class="able-exchange">
                                             환전 가능한 공양미 수 : 
