--- a/src/main/resources/static/css/join-login/email-join.css
+++ b/src/main/resources/static/css/join-login/email-join.css
@@ -201,6 +201,23 @@ input[type="checkbox"] {
     font-weight: bold;
 }
 
+.email-check {
+    font-size: 13px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    background-color: rgb(248, 100, 83);
+    border-color: rgb(248, 100, 83);
+    color: rgb(255, 255, 255);
+    outline: none;
+    border-width: 1px;
+    border-style: solid;
+    box-sizing: border-box;
+    border-radius: 4px;
+    cursor: pointer;
+    width: 84px;
+    font-weight: bold;
+}
+
 .drop-content {
     display: none;
 }
@@ -393,6 +410,68 @@ input[type="checkbox"] {
     font-size: 13px;
     line-height: 20px;
     text-align: center;
+}
+
+/* 모달 */
+.modal-wrap {
+    position: absolute;
+    width: auto;
+    z-index: 9999;
+    left: 0px;
+    top: 0px;
+    display: none;
+}
+
+.modal-container {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background: rgba(13, 13, 13, 0.65);
+}
+
+.modal {
+    max-width: 60%;
+    min-width: 328px;
+    position: absolute;
+    background: rgb(255, 255, 255);
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 2px 16px 0px;
+    border-radius: 4px;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    overflow: hidden;
+}
+
+.modal-content {
+    color: rgb(13, 13, 13);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-top: 24px;
+    padding-bottom: 24px;
+    font-size: 16px;
+    line-height: 27px;
+    letter-spacing: -0.020em;
+}
+
+.modal-ok-div {
+    border-top: 1px solid rgb(230, 230, 230);
+    display: flex;
+    justify-content: center;
+}
+
+.modal-ok {
+    flex-grow: 1;
+    border: 0px;
+    background: rgb(255, 255, 255);
+    font-weight: bold;
+    padding-top: 15px;
+    padding-bottom: 17px;
+    font-size: 16px;
+    line-height: 27px;
+    letter-spacing: -0.020em;
+    color: rgb(255, 87, 87);
+    cursor: pointer;
 }
 
 
